<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Money Tracker</string>
    <string name="title">Title</string>
    <string name="category">Category</string>
    <string name="price">Price</string>
    <string name="add_income">Add income</string>
    <string name="add_expense">Add expense</string>
    <string name="add">Add</string>
    <string name="report">Report</string>
    <string name="change_date">CHANGE THE DATE</string>
    <string name="total">TOTAL</string>
    <string name="total_incomes">Total income</string>
    <string name="total_expenses">Total expense</string>
    <string name="delete">Delete</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="all_time">All time</string>
    <string name="like_money_tracker">Do you like MoneyTracker?</string>
    <string name="rate_it_on_gp">Rate it on Google Play!</string>
    <string name="maybe_later">Maybe Later</string>
    <string name="no_thank_you">No, Thank You</string>
    <string name="yes_very">Yes!</string>

    <string name="title_records">Records</string>
    <string name="title_accounts">Accounts</string>
    <string name="title_add_income">Add income</string>
    <string name="title_add_expense">Add expense</string>
    <string name="title_add_account">Add account</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="export">Export</string>
    <string name="add_account">Add account</string>
    <string name="initial_sum">Initial sum</string>
    <string name="account">Account</string>
    <string name="transfer">Transfer</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="title_exchange_rates">Exchange rates</string>
    <string name="add_exchange_rate">Add exchange rate</string>
    <string name="arrow" translatable="false">" -> "</string>
    <string name="account_removed">Account removed</string>

    <string name="short_summary">Short summary</string>
    <string name="custom">Custom</string>
    <string name="summary">Summary</string>
    <string name="currency">Currency</string>
    <string name="error_exchange_rates">Error! Specify exchange rates.</string>
    <string name="amount">Amount</string>
    <string name="title_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="default_account">Default account</string>
    <string name="pref_default_account" translatable="false">pref_default_account</string>
    <string name="pref_default_currency" translatable="false">pref_default_currency</string>
    <string name="period_from_to" translatable="false">%1$s - %2$s</string>
    <string name="pref_non_substitution_currency" translatable="false">pref_non_substitution_currency</string>
    <string name="default_currency">Default currency</string>
    <string name="non_substitution_currency">NON substitution currency</string>

    <string name="title_charts">Results</string>
    <string name="incomes">Incomes</string>
    <string name="expenses">Expenses</string>

    <string name="pref_display_precision" translatable="false">pref_display_precision</string>
    <string name="display_precision">Display precision</string>
    <string name="precision_math" translatable="false">9.99$ = 10$</string>
    <string name="precision_int" translatable="false">9.99$ = 9$</string>
    <string name="precision_none" translatable="false">9.99$ = 9.99$</string>

    <string name="title_import_export">Import/Export</string>
    <string name="text_import">Import</string>
    <string name="records_imported">%1$s records has been imported</string>
    <string name="help">Help</string>
    <string name="import_help">To import records into application:\n
    1. Create CSV file in format - \n
    <b>time;title;category;price;currency.</b>\n
    2. Copy its content to text field.\n
    3. Press import button. In few seconds you will see how much records has been imported.\n
    \n
    <b>Note:</b> time - timestamp value in milliseconds; currency - 3 symbols code of currency.\n
    <b>Example:</b> 1466948795712;metro;transport;-20.0;UAH</string>

    <string name="slash" translatable="false">/</string>
    <string name="bank_sells">Bank sells</string>
    <string name="convert_to">Convert to</string>
    <string name="bank_buys">Bank buys</string>
    <string name="convert_from">Convert from</string>

    <string name="date">Date</string>
    <string name="time">Time</string>

    <string name="backup_data">Backup/Restore</string>
    <string name="failed_create_backup">Failed to create backup.</string>
    <string name="failed_restore_backup">Failed to restore backup.</string>
    <string name="backup_restored">Chosen backup file %1$s has been restored successfully.</string>
    <string name="backup_is_restored">Backup is restored</string>
    <string name="warning">Warning</string>
    <string name="want_erase_and_restore">Do you really want to erase all current data and restore backup file %1$s? Be sure to backup current data.</string>
    <string name="backup_now">Backup now</string>

    <string name="title_edit_income">Edit income</string>
    <string name="title_edit_expense">Edit expense</string>

    <string name="importing_records">Importing records…</string>
    <string name="making_backup">Making backup…</string>
    <string name="restoring_backup">Restoring backup…</string>
    <string name="fetching_backups">Fetching backups…</string>
    <string name="removing_backup">Removing backup…</string>

    <string name="pref_about" translatable="false">pref_about</string>
    <string name="about_summary">Version %1$s (Android %2$s)</string>
    <string name="title_activity_about">About</string>
    <string name="about">Open Money Tracker (OMT) is an accounting application. You can manage your incomes and expenses in easy way. Accounts and currency exchange rates are also available.\n\nTo help us make OMT better, please report bugs to <a href="http://4pda.ru/forum/index.php?showtopic=755203">the 4PDA forum</a>; new feature ideas are very welcome too. Find answers or start a discussion on <a href="http://4pda.ru/forum/index.php?showtopic=755203">forum</a>.\n\nOMT is <a href="https://en.wikipedia.org/wiki/Open-source_software">open source software</a>, so everyone is encouraged to become a contributor. Non-developers can also help. For instance, you can help translate OMT, provide screenshots or blog about OMT.\n\nOMT is released under the <a href="https://ru.wikipedia.org/wiki/GNU_General_Public_License#GPL_v3">GNU-GPL v3 license</a> and source code is available <a href="https://github.com/evgenii-kanivets/Money-Tracker">on GitHub</a>.\n\n<a href="https://ua.linkedin.com/in/evgeniikanivets">Developer profile on LinkedIn.</a></string>

    <string name="field_cant_be_empty">Field can\'t be empty.</string>
    <string name="too_rich_or_poor">You can\'t be so rich or so poor.</string>
    <string name="too_rich">You can\'t be so rich.</string>
    <string name="none">None</string>
    <string name="too_much_for_transfer">It\'s too much for transfer.</string>
    <string name="too_much_for_exchange">It\'s too much for exchange.</string>
    <string name="same_currencies">Can\'t convert between same currencies.</string>
    <string name="record_in_future">Can\'t create a record in future.</string>
    <string name="one_account_needed">At least one account is needed.</string>

    <string name="title_activity_edit_account">Edit Account</string>
    <string name="color">Color</string>
    <string name="goal">Goal</string>
    <string name="restore">Restore</string>
    <string name="archive">Archive</string>
    <string name="cant_archive_default_account">You can\'t archive a default account.</string>
    <string name="delete_account_title">Delete account</string>
    <string name="delete_account_message">Are you sure about deleting this account? It can\'t be restored after.</string>

    <string name="graph">Graph</string>
    <string name="information">Information</string>
    <string name="operations">Operations</string>

    <!-- Not translated strings -->
    <string name="delete_backup_title">Delete backup</string>
    <string name="delete_backup_message">Are you sure about deleting this backup file %1$s? It can\'t be restored after.</string>

    <string name="title_summary_record" translatable="false">%1$s (%2$d)</string>
    <string name="start_earlier_end">End date can\'t be earlier than start date</string>
</resources>
