<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/like_money_tracker"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:textSize="20sp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:paddingEnd="@dimen/activity_horizontal_margin" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rate_it_on_gp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:singleLine="false"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:textSize="16sp"
        android:paddingEnd="@dimen/activity_horizontal_margin"
        android:paddingStart="@dimen/activity_horizontal_margin" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yes_very"
            android:id="@+id/yes_button"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/maybe_later"
            android:id="@+id/maybeButton"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@android:color/darker_gray" />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/no_thank_you"
            android:id="@+id/thanksButton"
            android:layout_gravity="center_horizontal"
            android:background="#ffffffff"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:textSize="18sp" />

    </LinearLayout>

</LinearLayout>