<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/selectableItemBackground"
    android:clickable="true"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        style="@style/Text_Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/summary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/currency"
            android:layout_gravity="center_vertical" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_currency"
            android:layout_width="wrap_content"
            android:layout_height="25dp" />

    </LinearLayout>

    <include layout="@layout/view_divider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            style="@style/Text_Body1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/total" />

        <TextView
            android:id="@+id/tv_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="New Text"
            android:theme="@style/Text_Body2" />

        <TextView
            android:id="@+id/tv_currency"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:gravity="end"
            android:paddingEnd="@dimen/zero_margin"
            android:paddingStart="5dp"
            android:text="New Text"
            android:theme="@style/Text_Body1" />

    </LinearLayout>

</LinearLayout>