<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false"
    android:orientation="horizontal"
    android:padding="@dimen/activity_horizontal_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_transfer">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/half_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/from"
            android:theme="@style/Text_Hint" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_from"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            tools:listitem="@layout/view_spinner_item" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_from_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount"
                android:maxLines="1"
                android:nextFocusDown="@+id/et_to_amount"
                android:singleLine="true"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/half_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/to"
            android:theme="@style/Text_Hint" />

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/spinner_to"
            android:layout_width="match_parent"
            android:layout_height="@dimen/spinner_height"
            tools:listitem="@layout/view_spinner_item" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_to_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/amount"
                android:maxLines="1"
                android:singleLine="true"
                android:inputType="numberDecimal" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

</LinearLayout>